Fix secure data browser off screen in dashboard

--- a/dashboard/app/components/SecureDataForm/SecureDataForm.scss
+++ b/dashboard/app/components/SecureDataForm/SecureDataForm.scss
@@ -1,7 +1,7 @@
 @import '../../assets/styles/common.scss';
 
 #add-new-secure-data-form {
-  width: 1150px;
+  width: 100%;
   #new-secure-data-path {
     display: flex;
     font-size: 16px;
